src/objects/Send_Email__c.object
<CustomObject>
    <fields>
        <fullName>AF_CurrencyUpdateRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CurrencyUpdateRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Quarter__c</fullName>
        <label>Quarter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Angency_Name__c</fullName>
        <label>Angency Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <label>Financial Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TriggerEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL_link_to_Agency_Fees__c</fullName>
        <label>URL link to Agency Fees</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sendEmailBonusQuartToCatFinance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sendEmailBonusQuartToCatFinance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sendEmailToCatFinance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked only if a mail has to send to category finance users...when they are supposed to enter the Bonus threshold</description>
        <label>sendEmailToCatFinance</label>
        <type>Checkbox</type>
    </fields>
    <label>Send_Email</label>
    <nameField>
        <displayFormat>Email-{0000}</displayFormat>
        <label>Send_Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Send_Email</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>